--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -12,8 +12,8 @@ on:
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ master ]
-# schedule:
-#   - cron: '34 22 * * *'
+  schedule:
+    - cron: '00 20 * * 0-5'
 
 env:
   # Use docker.io for Docker Hub if empty
