--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -14,6 +14,8 @@ on:
     branches: [ master ]
   schedule:
     - cron: '00 20 * * 0-5'
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -55,9 +57,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=semver,pattern={{raw}}
             type=schedule,pattern=${{env.TAG_LATEST}}
             type=ref,event=branch,enable=${{ !endsWith(github.ref, 'refs/heads/master') }}
-            type=semver,pattern={{raw}}
             type=raw,value=${{env.TAG_LATEST}},enable=${{ endsWith(github.ref, 'refs/heads/master') }}
 
       # Build and push Docker image with Buildx (don't push on PR)
